--- a/ConferenceAttendees.API/ConferenceAttendees.API.csproj
+++ b/ConferenceAttendees.API/ConferenceAttendees.API.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
   </ItemGroup>
 
 </Project>
