#29, Add serilog aggregator as container

--- a/ConferenceAttendees.API/appsettings.json
+++ b/ConferenceAttendees.API/appsettings.json
@@ -7,10 +7,25 @@
     // when app is running with dockerfile container, then sql server address will be host.docker.internal, 1400
     "ConferenceAttendeeDatabaseConnection": "Server=host.docker.internal, 1400;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;;user id=sa;password=Str0ngPa$$word123;"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          // run seq on localhost via docker container
+          "serverUrl": "http://localhost:5431"
+          //"serverUrl": "http://seq_logs"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "Conference Attendees API"
     }
   },
   "AllowedHosts": "*"
