--- a/ConferenceAttendees.API/ConferenceAttendees.API.csproj
+++ b/ConferenceAttendees.API/ConferenceAttendees.API.csproj
@@ -16,6 +16,8 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.2" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+	  <PackageReference Include="Serilog.Sinks.Seq" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
