--- a/ConferenceAttendees.API/appsettings.json
+++ b/ConferenceAttendees.API/appsettings.json
@@ -18,7 +18,7 @@
         "Name": "Seq",
         "Args": {
           // run seq on localhost via docker container
-          "serverUrl": "http://localhost:5431"
+          "serverUrl": "http://host.docker.internal:5341"
           //"serverUrl": "http://seq_logs"
         }
       }
