--- a/ConferenceAttendees.MVC/ConferenceAttendees.MVC.csproj
+++ b/ConferenceAttendees.MVC/ConferenceAttendees.MVC.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>647e4a0c-7540-4a8c-af1b-d4bb85c20fe2</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
+  </ItemGroup>
 
 </Project>
