--- a/ConferenceAttendees.API/appsettings.json
+++ b/ConferenceAttendees.API/appsettings.json
@@ -3,9 +3,9 @@
     //connection string for locally installed sql server
     //"ConferenceAttendeeDatabaseConnection": "Server=localhost;Initial Catalog=ConferenceAttendeeDb;Integrated Security=True;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;",
     // when app is running in IIS or in kesteral, then integrated security will be false, if you're running sql in docker container
-    //"ConferenceAttendeeDatabaseConnection": "Server=localhost, 1400;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;;user id=sa;password=Str0ngPa$$word123;",
+    "ConferenceAttendeeDatabaseConnection": "Server=localhost, 1400;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;;user id=sa;password=Str0ngPa$$word123;",
     // when app is running with dockerfile container, then sql server address will be host.docker.internal, 1400
-    "ConferenceAttendeeDatabaseConnection": "Server=host.docker.internal, 1400;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;;user id=sa;password=Str0ngPa$$word123;"
+    //"ConferenceAttendeeDatabaseConnection": "Server=host.docker.internal, 1400;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;;user id=sa;password=Str0ngPa$$word123;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
