--- a/ConferenceAttendees.API/ConferenceAttendees.API.csproj
+++ b/ConferenceAttendees.API/ConferenceAttendees.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,6 +7,7 @@
     <UserSecretsId>88847225-02af-43b4-b253-9890351295a8</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	<ContainerRepository>ConferenceAttendees.Api.DotnetPublish</ContainerRepository>
+	<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
