--- a/ConferenceAttendees.API/appsettings.json
+++ b/ConferenceAttendees.API/appsettings.json
@@ -2,10 +2,16 @@
   "ConnectionStrings": {
     //connection string for locally installed sql server
     //"ConferenceAttendeeDatabaseConnection": "Server=localhost;Initial Catalog=ConferenceAttendeeDb;Integrated Security=True;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;",
+
     // when app is running in IIS or in kesteral, then integrated security will be false, if you're running sql in docker container
     //"ConferenceAttendeeDatabaseConnection": "Server=localhost, 1400;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;;user id=sa;password=Str0ngPa$$word123;",
+
     // when app is running with dockerfile container, then sql server address will be host.docker.internal, 1400
-    "ConferenceAttendeeDatabaseConnection": "Server=host.docker.internal, 1400;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;;user id=sa;password=Str0ngPa$$word123;"
+    //"ConferenceAttendeeDatabaseConnection": "Server=host.docker.internal, 1400;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;user id=sa;password=Str0ngPa$$word123;",
+
+    //Picking server from Docker compose
+    //"ConferenceAttendeeDatabaseConnection": "Server=mssql;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;user id=sa;password=Str0ngPa$$word123;",
+    "ConferenceAttendeeDatabaseConnection": "Server=mssql;Database=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;user id=sa;password=Str0ngPa$$word123;"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
@@ -18,8 +24,8 @@
         "Name": "Seq",
         "Args": {
           // run seq on localhost via docker container
-          "serverUrl": "http://host.docker.internal:5341"
-          //"serverUrl": "http://seq_logs"
+          //"serverUrl": "http://host.docker.internal:5341"
+          "serverUrl": "http://seq_logs"
         }
       }
     ],
