--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "7038:7038"
     environment:
       - ASPNETCORE_URLS=http://*:7038
+    depends_on: [mssql,seq_logs]
   conferenceattendees.mvc:
     image: ${DOCKER_REGISTRY-}conferenceattendeesmvc
     build:
@@ -21,4 +22,22 @@ services:
       - ASPNETCORE_URLS=http://*:7058
     depends_on:
       - conferenceattendees.api
+  mssql:
+    image: "mcr.microsoft.com/mssql/server"
+    container_name: "sql2"
+    hostname: "mssql"
+    environment:
+      - SA_PASSWORD=Str0ngPa$$word123
+      - ACCEPT_EULA=Y
+    restart: unless-stopped
+    ports:
+      - "1401:1433"
+  seq_logs:
+    image: datalust/seq
+    restart: unless-stopped
+    ports:
+      - "5432:80"
+    environment:
+      - ACCEPT_EULA=Y
+  
 
