--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,14 +24,14 @@ services:
       - conferenceattendees.api
   mssql:
     image: "mcr.microsoft.com/mssql/server"
-    container_name: "sql2"
-    hostname: "mssql"
-    environment:
-      - SA_PASSWORD=Str0ngPa$$word123
+    container_name: sql2
+    hostname: mssql
+    environment: 
+      - SA_PASSWORD="Str0ngPa$$word123"
       - ACCEPT_EULA=Y
     restart: unless-stopped
     ports:
-      - "1401:1433"
+      - "1401:1433" 
   seq_logs:
     image: datalust/seq
     restart: unless-stopped
