Fix passord issue, because there is special character and compise file not working properly

--- a/ConferenceAttendees.API/appsettings.json
+++ b/ConferenceAttendees.API/appsettings.json
@@ -10,8 +10,8 @@
     //"ConferenceAttendeeDatabaseConnection": "Server=host.docker.internal, 1400;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;user id=sa;password=Str0ngPa$$word123;",
 
     //Picking server from Docker compose
-    "ConferenceAttendeeDatabaseConnection": "Server=mssql;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;user id=sa;password=Str0ngPa$$word123;",
-     },
+    "ConferenceAttendeeDatabaseConnection": "Server=mssql;Initial Catalog=ConferenceAttendeeDb;Integrated Security=false;Trust Server Certificate=True;MultipleActiveResultSets=True;Encrypt=false;user id=sa;password=Str0ngPassword123;"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": "Debug",
