--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -8,6 +8,8 @@ RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx/nginx.conf /etc/nginx/nginx.conf
 COPY nginx/api-cert.key /etc/ssl/private/api-cert.key
 COPY nginx/api-cert.crt /etc/ssl/certs/api-cert.crt
+COPY nginx/mvc-cert.key /etc/ssl/private/mvc-cert.key
+COPY nginx/mvc-cert.crt /etc/ssl/certs/mvc-cert.crt
 
 # Set up directory for Nginx logs (if not already present)
 RUN mkdir -p /var/log/nginx
