--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     networks:
       - app-network
   mssql:
-    image: "mcr.microsoft.com/mssql/server"
+    image: "utahir604/conferenceattendeedb"
     container_name: sql2
     hostname: mssql
     environment: 
